--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "14       2.04        "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
     "\n",
     "con_features = ['hobby_diff_phys', 'hobby_diff_out', 'hobby_diff_in', 'attr_diff', 'sinc_diff', 'intel_diff', 'amb_diff', 'fun_diff', 'income_diff', 'age_diff', 'confidence', 'exphappy', 'out_freq', 'date_freq', 'imprace'] \n",
     "con_df = pd.DataFrame(columns=con_headers)\n",
-    "features_df = pd.read_csv('features.csv', index_col='feature')\n",
+    "features_df = pd.read_csv('data/features.csv', index_col='feature')\n",
     "\n",
     "for col in con_features:\n",
     "    con_df.loc[len(con_df.index)] = {\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "3       16.46        "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
     "    if col in ['date_freq', 'out_freq']: bins=7\n",
     "    plt.title(col)\n",
     "    sns.histplot(df[col], bins=bins)\n",
-    "    plt.savefig(f'figs/hist_{col}')\n",
+    "    plt.savefig(f'figs/figs/hist_{col}')\n",
     "    plt.close()\n"
    ]
   },
@@ -743,378 +743,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>match</th>\n",
-       "      <th>exphappy</th>\n",
-       "      <th>samerace</th>\n",
-       "      <th>hobby_diff_phys</th>\n",
-       "      <th>hobby_diff_out</th>\n",
-       "      <th>hobby_diff_in</th>\n",
-       "      <th>same_goal</th>\n",
-       "      <th>attr_diff</th>\n",
-       "      <th>sinc_diff</th>\n",
-       "      <th>intel_diff</th>\n",
-       "      <th>fun_diff</th>\n",
-       "      <th>amb_diff</th>\n",
-       "      <th>income_diff</th>\n",
-       "      <th>age_diff</th>\n",
-       "      <th>same_career</th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>imprace</th>\n",
-       "      <th>date_freq</th>\n",
-       "      <th>out_freq</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>40250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.550</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.150</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>12907.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.425</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>32705.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.275</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8341</th>\n",
-       "      <td>8341</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>28.5</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8342</th>\n",
-       "      <td>8342</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>22752.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8343</th>\n",
-       "      <td>8343</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>33.5</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>39275.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8344</th>\n",
-       "      <td>8344</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>26.5</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8345</th>\n",
-       "      <td>8345</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>22.5</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8346 rows × 20 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0  match  exphappy  samerace  hobby_diff_phys  hobby_diff_out  \\\n",
-       "0              0      0       3.0         0              7.0            21.0   \n",
-       "1              1      0       3.0         0              7.0            19.0   \n",
-       "2              2      1       3.0         1              9.0            18.0   \n",
-       "3              3      1       3.0         0              6.0            14.0   \n",
-       "4              4      1       3.0         0              2.0            28.0   \n",
-       "...          ...    ...       ...       ...              ...             ...   \n",
-       "8341        8341      0       3.0         0             21.0            21.0   \n",
-       "8342        8342      0       3.0         0             16.0             7.0   \n",
-       "8343        8343      0       3.0         0             11.0            26.0   \n",
-       "8344        8344      0       3.0         0             11.0            16.0   \n",
-       "8345        8345      0       3.0         0              9.0            15.0   \n",
-       "\n",
-       "      hobby_diff_in  same_goal  attr_diff  sinc_diff  intel_diff  fun_diff  \\\n",
-       "0              24.0          0       36.0       23.0        24.0      20.0   \n",
-       "1              15.0          0       60.0       19.0        18.0      38.0   \n",
-       "2              18.0          1       24.0       23.0        23.0      17.0   \n",
-       "3              16.0          1       30.0       14.0        18.0      38.0   \n",
-       "4              20.0          0       32.0       15.0        23.0      10.0   \n",
-       "...             ...        ...        ...        ...         ...       ...   \n",
-       "8341           13.0          1       40.0       15.5        34.0      28.5   \n",
-       "8342           18.0          1       74.0       23.0        12.0      14.0   \n",
-       "8343           25.0          0       64.0       16.0        33.5      19.5   \n",
-       "8344           22.0          0       37.0       26.5        29.5      18.5   \n",
-       "8345           33.0          0       50.0       22.5        12.5      25.0   \n",
-       "\n",
-       "      amb_diff  income_diff  age_diff  same_career  confidence  imprace  \\\n",
-       "0         17.0          NaN       6.0            0       0.125      4.5   \n",
-       "1         13.0      40250.0       1.0            0       0.550      1.5   \n",
-       "2         19.0          NaN       1.0            0       0.150      2.5   \n",
-       "3          8.0      12907.0       2.0            0       0.425      1.5   \n",
-       "4          9.0      32705.0       3.0            0       0.275      2.5   \n",
-       "...        ...          ...       ...          ...         ...      ...   \n",
-       "8341      15.0          NaN       1.0            0         NaN      3.5   \n",
-       "8342      14.0      22752.0       3.0            0         NaN      3.5   \n",
-       "8343      14.0      39275.0       2.0            0         NaN      5.0   \n",
-       "8344      12.0          NaN       5.0            0         NaN      3.0   \n",
-       "8345       7.0          NaN       5.0            0         NaN      1.5   \n",
-       "\n",
-       "      date_freq  out_freq  \n",
-       "0           7.0       1.0  \n",
-       "1           7.0       1.0  \n",
-       "2           7.0       1.0  \n",
-       "3           7.0       1.0  \n",
-       "4           7.0       1.0  \n",
-       "...         ...       ...  \n",
-       "8341        6.0       3.0  \n",
-       "8342        6.0       3.0  \n",
-       "8343        6.0       3.0  \n",
-       "8344        6.0       3.0  \n",
-       "8345        6.0       3.0  \n",
-       "\n",
-       "[8346 rows x 20 columns]"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for col in cat_features:\n",
     "    vc = df[col].value_counts()\n",
     "    plt.title(col)\n",
     "    sns.barplot(x=list(vc.index), y=vc.iloc[:], color='#3274a1')\n",
-    "    plt.savefig(f'figs/bar_{col}')\n",
+    "    plt.savefig(f'figs/figs/bar_{col}')\n",
     "    plt.close()"
    ]
   },
@@ -1134,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1147,6 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/speed_dating.csv')\n",
     "from sklearn.impute import KNNImputer\n",
     "import numpy as np\n",
     "\n",
@@ -1544,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1557,7 @@
        "[8346 rows x 20 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -2316,7 +1952,7 @@
        "[8346 rows x 20 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,6 +1969,8 @@
     "    norm_df[col] = norm_df[col].apply(lambda a: (((a - min) / (max - min)) * (high - low)) + low)\n",
     "\n",
     "df = norm_df\n",
+    "\n",
+    "df.to_csv('data/speed_dating_transformed.csv')\n",
     "\n",
     "df"
    ]
@@ -2353,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2365,7 +2003,7 @@
     "    # plt.title(col)\n",
     "    sns.histplot(df[col], bins=bins)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'figs_transformed/hist_{col}')\n",
+    "    plt.savefig(f'figs/figs_transformed/hist_{col}')\n",
     "    plt.close()"
    ]
   },
@@ -2378,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2386,7 +2024,7 @@
     "    df.pivot(columns='match', values=col).plot.hist()\n",
     "    plt.xlabel(col)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'figs_compare/hist_{col}')\n",
+    "    plt.savefig(f'figs/figs_compare/hist_{col}')\n",
     "    plt.close()"
    ]
   }
