--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "## 1. Dataset Creation\n",
     "\n",
-    "Converting `speed_dating_raw.csv` to `speed_dating.csv`. This section of code takes about 10 minutes to run, and can be skipped if you want, as we've included the `speed_dating.csv` file."
+    "Converting `cupid_scientists_original.csv` to `dataset_adjusted.csv`. This section of code takes about 10 minutes to run, and can be skipped if you want, as we've included the `dataset_adjusted.csv` file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "\n",
     "cols = ['match', 'exphappy', 'samerace', 'hobby_diff_phys', 'hobby_diff_out', 'hobby_diff_in', 'same_goal', 'attr_diff', 'sinc_diff', 'intel_diff', 'fun_diff', 'amb_diff', 'income_diff', 'age_diff', 'same_career', 'confidence', 'imprace', 'date_freq', 'out_freq']\n",
-    "raw_df = pd.read_csv('data/speed_dating_raw.csv', encoding='latin-1')\n",
+    "raw_df = pd.read_csv('data/cupid_scientists_original.csv', encoding='latin-1')\n",
     "df = pd.DataFrame(columns=cols)\n",
     "\n",
     "hobbies = ['sports', 'tvsports', 'exercise', 'dining', 'museums', 'art', 'hiking', 'gaming', 'clubbing', 'reading', 'tv', 'theater', 'movies', 'concerts', 'music', 'shopping', 'yoga']\n",
@@ -149,7 +149,7 @@
     "    return df\n",
     "\n",
     "df = create_df()\n",
-    "df.to_csv('data/speed_dating.csv')\n",
+    "df.to_csv('data/dataset_adjusted.csv')\n",
     "\n",
     "\n"
    ]
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "14       2.04        "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
     "import pandas as pd\n",
     "import statistics\n",
     "\n",
-    "df = pd.read_csv('data/speed_dating.csv')\n",
+    "df = pd.read_csv('data/dataset_adjusted.csv')\n",
     "\n",
     "con_headers = [\"Feature\", \"Desc.\", \"Count\", \"% of Missing\", \"Card.\", \"Min.\", \"Q1\", \"Median\", \"Q3\", \"Max.\", \"Mean\", \"Std. Dev.\", \"Notes\"]\n",
     "\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "3       16.46        "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
        "[8346 rows x 20 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        "[8346 rows x 20 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,7 +1970,7 @@
     "\n",
     "df = norm_df\n",
     "\n",
-    "df.to_csv('data/speed_dating_transformed.csv')\n",
+    "# df.to_csv('data/speed_dating_transformed.csv')\n",
     "\n",
     "df"
    ]
@@ -1991,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2052,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 8346 entries, 0 to 8345\n",
+      "RangeIndex: 8346 entries, 0 to 8345\n",
       "Data columns (total 20 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
@@ -2082,7 +2082,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/speed_dating_transformed.csv', encoding='latin-1', index_col=0)\n",
+    "# df = pd.read_csv('data/speed_dating_transformed.csv', encoding='latin-1', index_col=0)\n",
     "df.info()"
    ]
   },
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2243,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2384,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2469,7 +2469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN accuracy score: 0.81984\n",
+      "kNN accuracy score: 0.82032\n",
       "\n",
       "Post-IUFS:\n",
       "Accuracy score using DecisionTreeClassifier: 0.833\n"
@@ -2528,7 +2528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kNN accuracy score: 0.82702\n"
+      "kNN accuracy score: 0.82559\n"
      ]
     }
    ],
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,7 +2619,7 @@
     "    log_fs_desc_fts = slct_fts\n",
     "\n",
     "    # accuracy and confusion matrix using decision tree classifier\n",
-    "    # model_DecisionTree(log_fs_desc_fts, 'match', df)\n",
+    "    model_DecisionTree(log_fs_desc_fts, 'match', df)\n",
     "    \n",
     "    # accuracy and confusion matrix using KNN classifier\n",
     "    model_kNN_clf(log_fs_desc_fts, 'match', df, 2)\n",
@@ -2630,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2638,27 +2638,35 @@
      "output_type": "stream",
      "text": [
       "Selecting 10 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.81984\n",
       "\n",
       "Selecting 11 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.81936\n",
       "\n",
       "Selecting 12 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.81888\n",
       "\n",
       "Selecting 13 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.83086\n",
       "\n",
       "Selecting 14 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.82846\n",
       "\n",
       "Selecting 15 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.83565\n",
       "\n",
       "Selecting 16 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.82846\n",
       "\n",
       "Selecting 17 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.83230\n",
       "\n"
      ]
@@ -2676,12 +2684,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that when 15 features are selected we have the highest accuracy with the K Neighbors model, so we select 15 features and discard the remaining features and perform model selection and evaluation."
+    "We see that when 15 features are selected, we have the highest accuracy with the K Neighbors model, so we select 15 features and discard the remaining features and perform model selection and evaluation. We have evaluated `same_goal`, `amb_diff`, and `income_diff` to be the least important features based on the above metrics, so they are removed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2689,6 +2697,7 @@
      "output_type": "stream",
      "text": [
       "Selecting 15 out of 18 features...\n",
+      "Accuracy score using DecisionTreeClassifier: 0.833\n",
       "kNN accuracy score: 0.83565\n",
       "\n"
      ]
@@ -2696,50 +2705,13 @@
    ],
    "source": [
     "slct_fts = FS_RFE(df[desc_features], df['match'], 15)\n",
+    "print\n",
     "\n",
     "feats = list(slct_fts)\n",
     "feats.append('match')\n",
     "\n",
     "new_df = df[feats]\n",
-    "new_df.to_csv('data/speed_dating_select.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Discretizing Continuous Features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('data/speed_dating_select.csv')\n",
-    "\n",
-    "for col in con_features:\n",
-    "    num_vals = 7\n",
-    "    if len(df[col].unique()) <= num_vals:\n",
-    "        for i,val in enumerate(sorted(list(df[col].unique()))):\n",
-    "            df[col].replace(to_replace=val, value=i, inplace=True)\n",
-    "        # print(col, sorted(list(df[col].unique())))\n",
-    "        continue\n",
-    "    max = df[col].max()\n",
-    "    min = df[col].min()\n",
-    "    inc = (max - min) / num_vals\n",
-    "    for i in range(num_vals):\n",
-    "        low = min + (i * inc)\n",
-    "        high = low + inc\n",
-    "        # df[col] = df[col].apply(lambda a: i if (a > low and a < high) else a)\n",
-    "        for val in df[col]:\n",
-    "            if val >= low and val <= high:\n",
-    "                df[col].replace(to_replace=val, value=i, inplace=True)\n",
-    "    # print(col, sorted(list(df[col].unique())))\n",
-    "\n",
-    "df.to_csv('data/speed_dating_discretized.csv')\n",
-    "df"
+    "new_df.to_csv('data/cupid_scientists_pp.csv')"
    ]
   }
  ],
