--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2537,6 +2537,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you encounter problems, please make sure your scikit-learn package is up to date before running this code. `pip install scikit-learn==1.1.3`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -2554,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2565,7 +2572,7 @@
     "    Y = target_col\n",
     "\n",
     "    # using logistic regression \n",
-    "    model = LogisticRegression() \n",
+    "    model = LogisticRegression()\n",
     "\n",
     "    # performing recursive feature elimination to select features \n",
     "    rfe = RFE(model, n_features_to_select=no_of_fts)\n",
@@ -2593,7 +2600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2652,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2969,7 @@
        "[8346 rows x 16 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
