--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Log loss parameter was introdiced in scikit-learn version 1.1.2; please make sure your scikit-learn package is up to date before running this code."
+    "Log loss parameter was introdiced in scikit-learn version 1.1.2. If you encounter problems, please make sure your scikit-learn package is up to date before running this code. `pip install scikit-learn==1.1.3`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum score 0.8476281744130331 at depth 13 using gini\n"
+      "Maximum score 0.8442740776233828 at depth 14 using entropy\n"
      ]
     }
    ],
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum score 0.8112122664111164 with weights uniform, leaf size 10 and p=1\n"
+      "Maximum score 0.8643986583612842 with weights distance, leaf size 10 and p=1\n"
      ]
     }
    ],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "{'TP': 0, 'TN': 1728, 'FP': 0, 'FN': 359}"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,28 +408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.81, 0.01, 0.01, 0.01]\n"
+      "[0.42, 0.36, 0.22, 0.42]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8112122664111164,\n",
-       " 'precision': 0.34782608695652173,\n",
-       " 'recall': 0.11142061281337047,\n",
-       " 'f1score': 0.16877637130801687,\n",
-       " 'tss': 0.0680178350355927,\n",
-       " 'gss': 0.04881008429413064}"
+       "{'accuracy': 0.8643986583612842,\n",
+       " 'precision': 0.7209302325581395,\n",
+       " 'recall': 0.34540389972144847,\n",
+       " 'f1score': 0.46704331450094155,\n",
+       " 'tss': 0.3176261219436707,\n",
+       " 'gss': 0.25015838031843646}"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,29 +456,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.95, 0.29, 0.28, 0.29]\n",
-      "{'TP': 211, 'TN': 1465, 'FP': 263, 'FN': 148}\n"
+      "[0.81, 0.29, 0.12, 0.29]\n",
+      "{'TP': 144, 'TN': 1524, 'FP': 204, 'FN': 215}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8030666027791088,\n",
-       " 'precision': 0.4451476793248945,\n",
-       " 'recall': 0.5877437325905293,\n",
-       " 'f1score': 0.5066026410564225,\n",
-       " 'tss': 0.4355446585164552,\n",
-       " 'gss': 0.23954207108838355}"
+       "{'accuracy': 0.7992333493052228,\n",
+       " 'precision': 0.41379310344827586,\n",
+       " 'recall': 0.4011142061281337,\n",
+       " 'f1score': 0.4073550212164073,\n",
+       " 'tss': 0.2830586505725782,\n",
+       " 'gss': 0.16722648181180116}"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
