--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2654,21 +2654,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that when 15 features are selected, we have the highest accuracy with the K Neighbors model, so we select 15 features and discard the remaining features and perform model selection and evaluation. We have evaluated `same_goal`, `amb_diff`, and `income_diff` to be the least important features based on the above metrics, so they are removed."
+    "We see that when 15 features are selected, we have the highest accuracy with the K Neighbors model, so we select 16 features and discard the remaining features and perform model selection and evaluation. We have evaluated `amb_diff` to be the least important feature based on RFE selection, and `same_goal` to be least important based on IUFS, so they are both removed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selecting 15 out of 17 features...\n",
+      "Selecting 16 out of 17 features...\n",
       "Accuracy score using DecisionTreeClassifier: 0.833\n",
-      "kNN accuracy score: 0.82846\n",
+      "kNN accuracy score: 0.83421\n",
       "\n"
      ]
     },
@@ -2696,6 +2696,7 @@
        "      <th>exphappy</th>\n",
        "      <th>samerace</th>\n",
        "      <th>hobby_diff_phys</th>\n",
+       "      <th>hobby_diff_out</th>\n",
        "      <th>hobby_diff_in</th>\n",
        "      <th>attr_diff</th>\n",
        "      <th>sinc_diff</th>\n",
@@ -2717,6 +2718,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.291667</td>\n",
+       "      <td>0.600000</td>\n",
        "      <td>0.800000</td>\n",
        "      <td>0.571036</td>\n",
        "      <td>0.597222</td>\n",
@@ -2736,6 +2738,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.291667</td>\n",
+       "      <td>0.533333</td>\n",
        "      <td>0.472727</td>\n",
        "      <td>0.958946</td>\n",
        "      <td>0.486111</td>\n",
@@ -2755,6 +2758,7 @@
        "      <td>0.222222</td>\n",
        "      <td>1</td>\n",
        "      <td>0.375000</td>\n",
+       "      <td>0.500000</td>\n",
        "      <td>0.581818</td>\n",
        "      <td>0.377081</td>\n",
        "      <td>0.597222</td>\n",
@@ -2774,6 +2778,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.250000</td>\n",
+       "      <td>0.366667</td>\n",
        "      <td>0.509091</td>\n",
        "      <td>0.474059</td>\n",
        "      <td>0.347222</td>\n",
@@ -2793,6 +2798,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.083333</td>\n",
+       "      <td>0.833333</td>\n",
        "      <td>0.654545</td>\n",
        "      <td>0.506384</td>\n",
        "      <td>0.375000</td>\n",
@@ -2825,12 +2831,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8341</th>\n",
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.875000</td>\n",
+       "      <td>0.600000</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>0.635688</td>\n",
        "      <td>0.388889</td>\n",
@@ -2850,6 +2858,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.666667</td>\n",
+       "      <td>0.133333</td>\n",
        "      <td>0.581818</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.597222</td>\n",
@@ -2869,6 +2878,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.458333</td>\n",
+       "      <td>0.766667</td>\n",
        "      <td>0.836364</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.402778</td>\n",
@@ -2888,6 +2898,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.458333</td>\n",
+       "      <td>0.433333</td>\n",
        "      <td>0.727273</td>\n",
        "      <td>0.587199</td>\n",
        "      <td>0.694444</td>\n",
@@ -2907,6 +2918,7 @@
        "      <td>0.222222</td>\n",
        "      <td>0</td>\n",
        "      <td>0.375000</td>\n",
+       "      <td>0.400000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.797317</td>\n",
        "      <td>0.583333</td>\n",
@@ -2923,59 +2935,59 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8346 rows × 16 columns</p>\n",
+       "<p>8346 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      exphappy  samerace  hobby_diff_phys  hobby_diff_in  attr_diff  \\\n",
-       "0     0.222222         0         0.291667       0.800000   0.571036   \n",
-       "1     0.222222         0         0.291667       0.472727   0.958946   \n",
-       "2     0.222222         1         0.375000       0.581818   0.377081   \n",
-       "3     0.222222         0         0.250000       0.509091   0.474059   \n",
-       "4     0.222222         0         0.083333       0.654545   0.506384   \n",
-       "...        ...       ...              ...            ...        ...   \n",
-       "8341  0.222222         0         0.875000       0.400000   0.635688   \n",
-       "8342  0.222222         0         0.666667       0.581818   1.000000   \n",
-       "8343  0.222222         0         0.458333       0.836364   1.000000   \n",
-       "8344  0.222222         0         0.458333       0.727273   0.587199   \n",
-       "8345  0.222222         0         0.375000       1.000000   0.797317   \n",
+       "      exphappy  samerace  hobby_diff_phys  hobby_diff_out  hobby_diff_in  \\\n",
+       "0     0.222222         0         0.291667        0.600000       0.800000   \n",
+       "1     0.222222         0         0.291667        0.533333       0.472727   \n",
+       "2     0.222222         1         0.375000        0.500000       0.581818   \n",
+       "3     0.222222         0         0.250000        0.366667       0.509091   \n",
+       "4     0.222222         0         0.083333        0.833333       0.654545   \n",
+       "...        ...       ...              ...             ...            ...   \n",
+       "8341  0.222222         0         0.875000        0.600000       0.400000   \n",
+       "8342  0.222222         0         0.666667        0.133333       0.581818   \n",
+       "8343  0.222222         0         0.458333        0.766667       0.836364   \n",
+       "8344  0.222222         0         0.458333        0.433333       0.727273   \n",
+       "8345  0.222222         0         0.375000        0.400000       1.000000   \n",
        "\n",
-       "      sinc_diff  intel_diff  fun_diff  income_diff  age_diff  same_career  \\\n",
-       "0      0.597222    0.506579  0.504952     0.666667  0.545455            0   \n",
-       "1      0.486111    0.348684  1.000000     0.111111  0.090909            0   \n",
-       "2      0.597222    0.480263  0.414916     0.111111  0.090909            0   \n",
-       "3      0.347222    0.348684  1.000000     0.222222  0.181818            0   \n",
-       "4      0.375000    0.480263  0.204832     0.333333  0.272727            0   \n",
-       "...         ...         ...       ...          ...       ...          ...   \n",
-       "8341   0.388889    0.769737  0.760054     0.111111  0.090909            0   \n",
-       "8342   0.597222    0.190789  0.324880     0.333333  0.272727            0   \n",
-       "8343   0.402778    0.756579  0.489946     0.222222  0.181818            0   \n",
-       "8344   0.694444    0.651316  0.459934     0.555556  0.454545            0   \n",
-       "8345   0.583333    0.203947  0.655012     0.555556  0.454545            0   \n",
+       "      attr_diff  sinc_diff  intel_diff  fun_diff  income_diff  age_diff  \\\n",
+       "0      0.571036   0.597222    0.506579  0.504952     0.666667  0.545455   \n",
+       "1      0.958946   0.486111    0.348684  1.000000     0.111111  0.090909   \n",
+       "2      0.377081   0.597222    0.480263  0.414916     0.111111  0.090909   \n",
+       "3      0.474059   0.347222    0.348684  1.000000     0.222222  0.181818   \n",
+       "4      0.506384   0.375000    0.480263  0.204832     0.333333  0.272727   \n",
+       "...         ...        ...         ...       ...          ...       ...   \n",
+       "8341   0.635688   0.388889    0.769737  0.760054     0.111111  0.090909   \n",
+       "8342   1.000000   0.597222    0.190789  0.324880     0.333333  0.272727   \n",
+       "8343   1.000000   0.402778    0.756579  0.489946     0.222222  0.181818   \n",
+       "8344   0.587199   0.694444    0.651316  0.459934     0.555556  0.454545   \n",
+       "8345   0.797317   0.583333    0.203947  0.655012     0.555556  0.454545   \n",
        "\n",
-       "      confidence   imprace  date_freq  out_freq  match  \n",
-       "0       0.006250  0.421053   1.000000  0.000000      0  \n",
-       "1       0.027500  0.105263   1.000000  0.000000      0  \n",
-       "2       0.007500  0.210526   1.000000  0.000000      1  \n",
-       "3       0.021250  0.105263   1.000000  0.000000      1  \n",
-       "4       0.013750  0.210526   1.000000  0.000000      1  \n",
-       "...          ...       ...        ...       ...    ...  \n",
-       "8341    0.019341  0.315789   0.833333  0.333333      0  \n",
-       "8342    0.019341  0.315789   0.833333  0.333333      0  \n",
-       "8343    0.019341  0.473684   0.833333  0.333333      0  \n",
-       "8344    0.019341  0.263158   0.833333  0.333333      0  \n",
-       "8345    0.019341  0.105263   0.833333  0.333333      0  \n",
+       "      same_career  confidence   imprace  date_freq  out_freq  match  \n",
+       "0               0    0.006250  0.421053   1.000000  0.000000      0  \n",
+       "1               0    0.027500  0.105263   1.000000  0.000000      0  \n",
+       "2               0    0.007500  0.210526   1.000000  0.000000      1  \n",
+       "3               0    0.021250  0.105263   1.000000  0.000000      1  \n",
+       "4               0    0.013750  0.210526   1.000000  0.000000      1  \n",
+       "...           ...         ...       ...        ...       ...    ...  \n",
+       "8341            0    0.019341  0.315789   0.833333  0.333333      0  \n",
+       "8342            0    0.019341  0.315789   0.833333  0.333333      0  \n",
+       "8343            0    0.019341  0.473684   0.833333  0.333333      0  \n",
+       "8344            0    0.019341  0.263158   0.833333  0.333333      0  \n",
+       "8345            0    0.019341  0.105263   0.833333  0.333333      0  \n",
        "\n",
-       "[8346 rows x 16 columns]"
+       "[8346 rows x 17 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "slct_fts = FS_RFE(df[desc_features], df['match'], 15)\n",
+    "slct_fts = FS_RFE(df[desc_features], df['match'], 16)\n",
     "print\n",
     "\n",
     "feats = list(slct_fts)\n",
